# conan-dependency-submission

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  action.yml  conan_submit.py  pyproject.toml  requirements.txt  starter-workflow.yml
.github/workflows/: conan.yml  lint.yml
