[project]
name = "conan-dependency-submission"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.7"
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "attrs==22.2.0",
    "anytree==2.10.0",
    "GitPython==3.1.41",
    "requests==2.31.0",
    "furl==2.1.3",
]

[tool.ruff]
line-length = 120
exclude = [".git", "__pycache__", "*.egg", "build", ".pytype", ".mypy_cache"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.main]
ignore-paths = ["\\.git", "__pycache__", ".*\\.egg", "build", "\\.pytype", "\\.mypy_cache"]

[tool.black] 
line-length = 120
target-version = ['py311']
exclude = "/(\\.direnv|\\.eggs|\\.git|\\.mypy_cache|\\.nox|\\.tox|\\.venv|venv|\\.ipynb_checkpoints|_build|buck-out|build|dist|__pypackages__|\\.pytype)/"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytype]
python_version = "3.11"

[tool.fixit]
root = true
python-version = "3.11"
formatter = "black"
